--- a/page.html
+++ b/page.html
@@ -2,6 +2,7 @@
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head> 
+    <link rel="stylesheet" href="style.css">
 <title>Escape Room</title>
 </head>
 <body>
