--- a/page.html
+++ b/page.html
@@ -6,10 +6,11 @@
 <title>Escape Room</title>
 </head>
 <body>
-    <h1>Escape Room Title</h1>
-    <p>This is where the text will go for the body.</p>
-    <h2>A Description</h2>
-    <p>This is where the text will go</p>
-    <h3>test</h3>
+    <div class="box">
+     <h1>Escape Room Title</h1>
+     <p>This is where the text will go for the body.</p>
+        <h2>A Description</h2>
+     <p>This is where the text will go</p>
+     </div>
 </body>
 </html>
