--- a/page.html
+++ b/page.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="box">
-     <h1>Escape Room Title</h1>
-     <p>This is where the text will go for the body.</p>
+     <h1 style="text-align: center;">Escape Room Title</h1>
+     <p style="text-align: center;">This is where the text will go for the body.</p>
         <h2>A Description</h2>
      <p>This is where the text will go</p>
      </div>
