--- a/page.html
+++ b/page.html
@@ -6,11 +6,17 @@
 <title>Escape Room</title>
 </head>
 <body>
+    <header>
+
+    </header>
+<main>
     <div class="box">
      <h1 style="text-align: center;">Escape Room Title</h1>
      <p style="text-align: center;">This is where the text will go for the body.</p>
         <h2>A Description</h2>
      <p>This is where the text will go</p>
      </div>
+</main>
 </body>
+<footer>  </footer>
 </html>
