--- a/page.html
+++ b/page.html
@@ -1,22 +1,22 @@
 <html>
+
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head> 
     <link rel="stylesheet" href="style.css">
 <title>Escape Room</title>
+
 </head>
 <body>
-    <header>
 
-    </header>
-<main>
-    <div class="box">
+<div class "landing-page">
+<div class "page-content">
      <h1 style="text-align: center;">Escape Room Title</h1>
      <p style="text-align: center;">This is where the text will go for the body.</p>
-        <h2>A Description</h2>
-     <p>This is where the text will go</p>
      </div>
-</main>
+     </div>
+     <a href="#"> Start</a>
+     <a style="text-align: center;"> </a> 
+
 </body>
-<footer>  </footer>
 </html>
