added text section

--- a/page.html
+++ b/page.html
@@ -17,6 +17,9 @@
      </div>
      <a href="#"> Start</a>
      <a style="text-align: center;"> </a> 
-
+<div class="text">
+    <div> This is where the information will be included on the escape room
+<div> More text that explains the purpose and what the escape room is for
+    </div>
 </body>
 </html>
