tried to add gradient over background

--- a/page.html
+++ b/page.html
@@ -1,5 +1,4 @@
 <html>
-
  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head> 
@@ -8,15 +7,13 @@
 </head>
 
 <body>
-     <h1 style="text-align: center;">Escape Room Title</h1>
-     <p style="text-align: center;">This is where the text will go for the body.</p>
-     </div>
-     </div>
-     <a href="#"> Start</a>
-     <a style="text-align: center;"> </a> 
-<div class="text">
-    <div> This is where the information will be included on the escape room
-<div> More text that explains the purpose and what the escape room is for
-    </div>
+    <div> class="container" </div>  
+ <h1 style="text-align: center;">Escape Room Title</h1>
+  <p style="text-align: center;">This is where the text will go for the body.</p>
+  <a href="#"> Start</a>
+  <a style="text-align: center;"> </a> 
+ <li>This is where the information will be included on the escape room</li>
+ <li>More text that explains the purpose and what the escape room is for</li>
+
 </body>
 </html>
