--- a/page.html
+++ b/page.html
@@ -1,19 +1,20 @@
 <html>
  <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head> 
-<link rel="stylesheet" href="style.css">
-<title>Escape Room</title>
-</head>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
+ <head> 
+ <link rel="stylesheet" href="style.css">
+ <title>Escape Room</title>
+ </head>
 
-<body>
-    <div> class="container" </div>  
- <h1 style="text-align: center;">Escape Room Title</h1>
-  <p style="text-align: center;">This is where the text will go for the body.</p>
-  <a href="#"> Start</a>
-  <a style="text-align: center;"> </a> 
- <li>This is where the information will be included on the escape room</li>
- <li>More text that explains the purpose and what the escape room is for</li>
-
+ <body>
+    <div> class="container"
+      <h1 style="text-align: center;">Escape Room Title</h1>
+      <p style="text-align: center;">This is where the text will go for the body.</p>
+     <a href="#"> Start</a>
+     <a style="text-align: center;"> </a> 
+     <li>This is where the information will be included on the escape room</li>
+     <li>More text that explains the purpose and what the escape room is for</li>
+    </div>
 </body>
 </html>
