--- a/page.html
+++ b/page.html
@@ -8,6 +8,12 @@
  </head>
 
  <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">News</a>
+        <a href="#hints">Contact</a>
+        <a href="#curriculum">About</a>
+      </div>
     <div> class="container"
       <h1 style="text-align: center;">Escape Room Title</h1>
       <p style="text-align: center;">This is where the text will go for the body.</p>
