--- a/page.html
+++ b/page.html
@@ -14,10 +14,10 @@
         <a href="#hints">Contact</a>
         <a href="#curriculum">About</a>
       </div>
-    <div> class="container"
+    <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
       <p style="text-align: center;">This is where the text will go for the body.</p>
-     <a href="#"> Start</a>
+    <button>Start</button>
      <a style="text-align: center;"> </a> 
      <li>This is where the information will be included on the escape room</li>
      <li>More text that explains the purpose and what the escape room is for</li>
