--- a/page.html
+++ b/page.html
@@ -10,9 +10,7 @@
  <body>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="#about">News</a>
-        <a href="#hints">Contact</a>
-        <a href="#curriculum">About</a>
+        <a href="#about">About</a>
       </div>
     <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
