--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
  </head>
 
  <body>
-    <div class="topnav">
+    <div class="navbar">
         <a class="active" href="#home">Home</a>
         <a href="#about">About</a>
       </div>
