--- a/page.html
+++ b/page.html
@@ -15,7 +15,11 @@
     <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
       <p style="text-align: center;">This is where the text will go for the body.</p>
-    <button>Start</button>
+   
+      <div class="button">
+      <button>Start</button>
+      </div>
+      
      <a style="text-align: center;"> </a> 
      <li>This is where the information will be included on the escape room</li>
      <li>More text that explains the purpose and what the escape room is for</li>
