--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
  <body>
     <div class="navbar">
-        <a class="active" href="#home">Home</a>
-        <a href="#about">About</a>
+    <div class="navbara"
+           <a class="active" href="index.html"> Home</a>
+           <a class="active" href="about"> About </a> 
+        </div>
       </div>
     <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
@@ -19,7 +21,7 @@
       <div class="button">
       <button>Start</button>
       </div>
-      
+
      <a style="text-align: center;"> </a> 
      <li>This is where the information will be included on the escape room</li>
      <li>More text that explains the purpose and what the escape room is for</li>
