div for navbara

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
  <body>
     <div class="navbar">
-    <div class="navbara"
-           <a class="active" href="index.html"> Home</a>
-           <a class="active" href="about"> About </a> 
-        </div>
+
+    <div class="navbara">
+           <a class="active" href="index.html"> Home </a>
+           <a class="active" href="about.html"> About </a> 
+      </div>
+
       </div>
     <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
