button, issue with text

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
  <body>
     <div class="navbar">
 
-    <div class="navbara">
+    <div>
            <a class="active" href="index.html"> Home </a>
            <a class="active" href="about.html"> About </a> 
       </div>
+    
+    </div>
 
-      </div>
     <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
       <p style="text-align: center;">This is where the text will go for the body.</p>
-   
-      <div class="button">
-      <button>Start</button>
-      </div>
-
      <a style="text-align: center;"> </a> 
-     <li>This is where the information will be included on the escape room</li>
-     <li>More text that explains the purpose and what the escape room is for</li>
-    </div>
-</body>
+     <div class="button">
+      <a href="game.html" class="button2">Button</a>
+      </div>
+     <p>This is where the information will be included on the escape room
+     More text that explains the purpose and what the escape room is for</p>
+   </div>
+   
+    </body>
 </html>
