--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <div class="container">
       <h1 style="text-align: center;">Escape Room Title</h1>
       <p style="text-align: center;">This is where the text will go for the body.</p>
-     <a style="text-align: center;"> </a> 
-     <div class="button">
-      <a href="game.html" class="button2">Button</a>
-      </div>
+     <div>
+      <a style="text-align: center;"> </a> 
+      <a href="game.html" class="button2"> Button</a>
+     </div>
      <p>This is where the information will be included on the escape room
      More text that explains the purpose and what the escape room is for</p>
    </div>
+  
    
     </body>
 </html>
