--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 
     <div class="container">
       <h1 style="text-align: center;">Library Labyrinth</h1>
-      <p style="text-align: center;">This is where the text will go for the body.</p>
+      <p style="text-align: center;">Greetings, young explorers! Today marks an extraordinary adventure as your class embarks on a whimsical field trip to the mystical Enchanted Library—a haven where stories come alive, and every book holds the promise of magical discovery. The library, bathed in an mysterious glow, seems to whisper tales of wonder and awe. Little do you know, this trip will take an unexpected turn—the doors mysteriously close, and your teacher vanishes! Now, to unlock the secrets and find your teacher, you must navigate through captivating literacy and math challenges woven into the very fabric of the Enchanted Library.</p>
       <div>
       <a style="text-align: center;"> </a> 
       <a href="game.html" class="button2"> START </a>
      </div>
-     <p>This is where the information will be included on the escape room
-     More text that explains the purpose and what the escape room is for.</p>
+     <p> extra text </p>
    </div>
   
    
