--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a style="text-align: center;"> </a> 
       <a href="game.html" class="button2"> START </a>
      </div>
-     <p> extra text </p>
+     <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
   
    
