tried to edit scrollbar, issues with photo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <a href="game.html" class="button2"> START </a>
      </div>
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
-   </div>
+   <div class="scrollbar"></div>
+    </div>
   
    
     </body>
