scrollbar and text

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
         <h1> About The Project </h1>
-        <p> This is a project I have created for Get Coding. It is intended to be an interactive learning game that allows kids to develop an understanding of curriculum goals through deep learning and play based interactions. </p>
+        <p> Welcome! Library Labyrinth is an immersive and educational project specially designed for students in Newfoundland and Labrador, aligning with the literacy and math curriculum guidelines. The goal of this project is to make learning a thrilling adventure, engaging students in problem-solving and critical thinking- all while having fun! </p>
   
         <a style="text-align: center;"> </a> 
        </div>
