--- a/game.html
+++ b/game.html
@@ -17,6 +17,19 @@
 
     <div class="container">
       <h1 style="text-align: center;">Escape The Library</h1>
+      <div class="text-box">
+        <div id="quiz-container">
+            <h1>Quiz Example</h1>
+            <div id="question-container"></div>
+            <button id="submit-btn">Submit Answers</button>
+            <div id="results-container"></div>
+        </div>
+    
+        <script src="script.js"></script>
+    </body>
+    </html>
+    </div>
+</body>
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
   
