--- a/game.html
+++ b/game.html
@@ -18,21 +18,24 @@
     <div class="container">
       <h1 style="text-align: center;">Escape The Library</h1>
       <div class="text-box">
-        <div id="quiz-container">
-            <h1>Quiz Example</h1>
-            <div id="question-container"></div>
-            <button id="submit-btn">Submit Answers</button>
-            <div id="results-container"></div>
-        </div>
-    
-        <script src="script.js"></script>
-    </body>
+        
+        <div class="quiz">
+              <p id="question"> Question Goes here </p>
+              <div id="answer-buttons">
+              <button class="btn"> Answer 1</button>
+              <button class="btn"> Answer 2</button>
+              <button class="btn"> Answer 3</button>
+             <button class="btn"> Answer 4</button>
+             </div>
+             <button id="next-btn">Next</button>
+      </div>
+
     </html>
     </div>
 </body>
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
   
-   
+   <script src="game.js"></script>
     </body>
 </html>
