tried to fix the message container- now it stays

--- a/game.html
+++ b/game.html
@@ -30,6 +30,8 @@
              <button id="next-btn">Next</button>
       </div>
 
+      <div id="message-container"></div>
+
     </html>
     </div>
 </body>
