--- a/game.html
+++ b/game.html
@@ -16,9 +16,8 @@
     </div>
 
     <div class="container">
-      <h1 style="text-align: center;">Escape The Library</h1>
+      <h1 class="wavy-text spooky-title" style="text-align: center;">Escape The Library</h1>
       <div class="text-box">
-        
         <div class="quiz">
               <p id="question"> Question Goes here </p>
               <div id="answer-buttons">
@@ -27,6 +26,7 @@
               <button class="btn"> Answer 3</button>
              <button class="btn"> Answer 4</button>
              </div>
+             
              <button id="next-btn">Next</button>
       </div>
 
@@ -34,10 +34,13 @@
 
     </html>
     </div>
-</body>
+
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
   
    <script src="game.js"></script>
+
+  
+   
     </body>
 </html>
