--- a/game.html
+++ b/game.html
@@ -16,8 +16,17 @@
     </div>
 
     <div class="container">
-      <h1 class="wavy-text spooky-title" style="text-align: center;">Escape The Library</h1>
+      <h1 style="text-align: center;">Escape The Library</h1>
       <div class="text-box">
+
+        <div id="Timer">
+          <div class="timer">
+
+          <h2>Can You Escape In Time? </h2>
+          <h2 id="TimerDisplay">20:00</h2>
+          </div>
+          </div>
+
         <div class="quiz">
               <p id="question"> Question Goes here </p>
               <div id="answer-buttons">
@@ -26,7 +35,6 @@
               <button class="btn"> Answer 3</button>
              <button class="btn"> Answer 4</button>
              </div>
-             
              <button id="next-btn">Next</button>
       </div>
 
