--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@
     
     </div>
 
+    
     <div class="container">
       <h1 style="text-align: center;">Escape The Library</h1>
       <div class="text-box">
@@ -39,10 +40,11 @@
       </div>
 
       <div id="message-container"></div>
-      <div id="game-message"></div> 
 
     </html>
     </div>
+
+    <div id="strike-count">Strikes: <span id="strike-number">0</span></div>
 
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
