--- a/levels.html
+++ b/levels.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="navbar">
-        <a class="active" href="index.html">Home</a>
+        <a class="active" href="levels.html">Home</a>
         <a class="active" href="about.html">About</a>
     </div>
     <div class="container">
         <h1 style="text-align: center;">Escape The Library</h1>
-        <a href="levels.html" class="button2">Easy</a>
-        <a href="levels.html" class="button2">Medium</a>
-        <a href="levels.html" class="button2">Hard</a>
+        <a href="game.html?level=easy" class="button2">Easy</a>
+        <a href="game.html?level=medium" class="button2">Medium</a>
+        <a href="game.html?level=hard" class="button2">Hard</a>
     </div>
 </body>
 </html>
