--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p style="text-align: center;">Greetings, young explorers! Today marks an extraordinary adventure as your class embarks on a whimsical field trip to the mystical Enchanted Library—a haven where stories come alive, and every book holds the promise of magical discovery. The library, bathed in an mysterious glow, seems to whisper tales of wonder and awe. Little do you know, this trip will take an unexpected turn—the doors mysteriously close, and your teacher vanishes! Now, to unlock the secrets and find your teacher, you must navigate through captivating literacy and math challenges woven into the very fabric of the Enchanted Library.</p>
       <div>
       <a style="text-align: center;"> </a> 
-      <a href="game.html" class="button2"> START </a>
+      <a href="levels.html" class="button2"> START </a>
      </div>
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    <div class="scrollbar"></div>
