--- a/game.html
+++ b/game.html
@@ -18,6 +18,9 @@
     
     <div class="container">
       <h1 style="text-align: center;">Escape The Library</h1>
+      <input type="text" id="player-name-input" placeholder="Enter your name">
+<button id="submit-name" class="btn">Submit</button>
+<p id="submitted-name"></p> 
       <div class="text-box">
 
         <div id="Timer">
