--- a/levels.html
+++ b/levels.html
@@ -16,6 +16,7 @@
         <a href="game.html?level=easy" class="button2">Easy</a>
         <a href="game.html?level=medium" class="button2">Medium</a>
         <a href="game.html?level=hard" class="button2">Hard</a>
+        <script src="game.js"></script>
     </div>
 </body>
 </html>
