--- a/game.html
+++ b/game.html
@@ -47,7 +47,8 @@
     </html>
     </div>
 
-    <div id="strike-count">Strikes: <span id="strike-number">0</span></div>
+    <div id="strike-count" class="strikes"> Strikes: <span class="strikes" id="strike-number">0</span></div>
+    
 
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
