cleaned up all CSS/fixed buttons added SM

--- a/levels.html
+++ b/levels.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a class="active" href="levels.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a class="active" href="about.html">About</a>
     </div>
     <div class="container">
