--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
  
  <head> 
  <link rel="stylesheet" href="style.css">
+ <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
  <title>Escape Room</title>
  </head>
 
@@ -19,7 +20,13 @@
     <div class="container">
         <h1> About The Project </h1>
         <p> Welcome! Library Labyrinth is an immersive and educational project specially designed for students in Newfoundland and Labrador, aligning with the literacy and math curriculum guidelines. The goal of this project is to make learning a thrilling adventure, engaging students in problem-solving and critical thinking- all while having fun! </p>
-  
+    <div id="wLinkedIn">
+            <a href="https://www.linkedin.com/in/katharinenuotio/">
+                <span id="icon-bg"><i class="fa fa-linkedin"></i></span>
+                <span id="icon-label-bg">Follow</span>
+            </a>
+            <p>Follow me on LinkedIn to learn more about the project</p>
+        </div>
         <a style="text-align: center;"> </a> 
        </div>
      </div>
