--- a/levels.html
+++ b/levels.html
@@ -18,7 +18,7 @@
         <a href="game.html?level=hard" id="hardButton" class="button2">Hard</a>
       
 
-        <label for="categories">Choose A Category: </label> 
+        <label for="categories" class="label-text">Choose A Category: </label>
         <select name="categories" id="categories"onchange="show(this.value)"> 
         </select>
       
