--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
         <div id="Timer">
         <div class="timer">
           <h2>Can You Escape In Time? </h2>
-          <h2 id="TimerDisplay">20:00</h2>
+          <h2 id="TimerDisplay"></h2>
           </div>
           </div>
 
