--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h1> About The Project </h1>
         <p> Welcome! Library Labyrinth is an immersive and educational project specially designed for students in Newfoundland and Labrador, aligning with the literacy and math curriculum guidelines. The goal of this project is to make learning a thrilling adventure, engaging students in problem-solving and critical thinking- all while having fun! </p>
-        <p> I started this project through Get Coding. I am currently working as a grade 3-4 multi grade teacher. My goal with this project is to get more students working with and inspired by tech.  </p>
+        <p> I initiated this project through Get Coding. As a teacher handling grades 3-4, my goal is to foster students' interest in technology, inspiring them to explore its possibilities. </p>
         <div id="wLinkedIn">
             <a href="https://www.linkedin.com/in/katharinenuotio/">
                 <span id="icon-bg"><i class="fa fa-linkedin"></i></span>
