--- a/game.html
+++ b/game.html
@@ -45,8 +45,8 @@
 
     </html>
     </div>
+<div id="strike-container">Strikes: <span id="strike-number">0</span>/3</div>
 
-    <div id="strike-count" class="strikes"> Strikes: <span class="strikes" id="strike-number">0</span></div>
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
   
