--- a/game.html
+++ b/game.html
@@ -18,9 +18,7 @@
     
     <div class="container">
       <h1 style="text-align: center;">Escape The Library</h1>
-      <input type="text" id="player-name-input" placeholder="Enter your name">
-      <button id="submit-name" class="btn">Submit</button>
-      <p id="submitted-name"></p> 
+        <div id="submitted-name" class="name-text"></div>
       <div class="text-box">
 
         <div id="Timer">
@@ -45,7 +43,8 @@
 
     </html>
     </div>
-<div id="strike-container">Strikes: <span id="strike-number">0</span>/3</div>
+<div class="strike-number"id="strike-container">Strikes: <span id="strike-number">0</span>/3</div>
+
 
      <p> Remember, you can always click 'home' to return to the main page and re-start your adventure.</p>
    </div>
